--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -10,5 +10,9 @@
           %span 投稿
         %li.content__header--center--page 
           %span マイページ
-        = image_tag 'header_bg.jpg'
-        %h1.text-message sサイズだけの服を探そう！
+  .content__main
+    = image_tag 'header_bg.jpg'
+    %h1.text-message sサイズだけの服を探そう！
+.content__title 
+  %span コーディネイト一覧
+  .content__title--cordinate
