--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,3 +1,6 @@
+html,body{
+  padding:0;margin:0;background-color: #f9fafc;
+}
 .content{
   background-color: #f9fafc;
   width: 100%;
@@ -21,6 +24,7 @@
         background-color: white;
         border: solid #F0F8FF;
         float: left;
+        text-align: center;
       }
 
       &--like {
@@ -29,6 +33,7 @@
         background-color: white;
         border: solid #F0F8FF;
         float: left;
+        text-align: center;
       }
 
       &--post {
@@ -37,6 +42,7 @@
         background-color: white;
         border: solid #F0F8FF;
         float: left;
+        text-align: center;
       }
 
       &--page {
@@ -45,14 +51,45 @@
         background-color: white;
         border: solid #F0F8FF;
         float: left;
+        text-align: center;
       }
 
-        img {
-        height: 500px;
-        width: 100%;
-        top: 80px;
-        right: 565px;
+    }
+  }
+    img {
+    padding-left: 320px;
+    height: 500px;
+    width: 50%;
+    top: 80px;
+    right: 565px;
+    }
+
+    .text-message {
+      position: absolute;
+      top: 300px;
+      left: 500px;
+      color: white;
+      font-size: 30px;
+    }
+  &__bottom {
+    margin-top: 45px;
+    clear: both;
+    &--cordinate {
+    padding-left: 318px;
+      span{
+        border-bottom: 1px solid #2e1754;
+      }
+      &--box {
+        height: 400px;
+        width : 300px;
+        background-color: white;
+        &--image {
+          img {
+            height: 350px;
+            width : 300px;
+          }
         }
+      }
     }
   }
 }
