--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -13,6 +13,9 @@
   .content__main
     = image_tag 'header_bg.jpg'
     %h1.text-message sサイズだけの服を探そう！
-.content__title 
-  %span コーディネイト一覧
-  .content__title--cordinate
+.content__bottom
+  .content__bottom--cordinate
+    %span コーディネイト一覧
+    .content__bottom--cordinate--box
+      .content__bottom--cordinate--box--image
+        = image_tag 'sample.jpg'
