--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,5 +1,6 @@
 html,body{
   padding:0;margin:0;background-color: #f9fafc;
+  width: 1024px;
 }
 .content{
   background-color: #f9fafc;
@@ -14,17 +15,17 @@ html,body{
 
     &--center {
       height: 80px;
-      width : 50%;
+      width : 660px;
       background-color: white;
       margin: 0 auto;
       line-height: 80px;
       &--search {
         height: 80px;
-        width: 23%;
+        width: 22%;
         background-color: white;
         border: solid #F0F8FF;
-        float: left;
         text-align: center;
+        float: left;
       }
 
       &--like {
@@ -37,7 +38,7 @@ html,body{
       }
 
       &--post {
-        width: 25%;
+        width: 20%;
         height: 80px;
         background-color: white;
         border: solid #F0F8FF;
@@ -46,7 +47,7 @@ html,body{
       }
 
       &--page {
-        width: 25%;
+        width: 20%;
         height: 80px;
         background-color: white;
         border: solid #F0F8FF;
@@ -57,17 +58,17 @@ html,body{
     }
   }
     img {
-    padding-left: 320px;
+    padding-left: 186px;
     height: 500px;
-    width: 50%;
+    width: 583px;
     top: 80px;
     right: 565px;
     }
 
     .text-message {
-      position: absolute;
-      top: 300px;
-      left: 500px;
+      position: relative;
+      bottom: 300px;
+      left: 300px;
       color: white;
       font-size: 30px;
     }
@@ -81,13 +82,21 @@ html,body{
       }
       &--box {
         height: 400px;
-        width : 300px;
-        background-color: white;
+        width : 670px;
+        background-color: #f0f8ff;
         &--image {
+          float: left;
           img {
             height: 350px;
-            width : 300px;
+            width : 320px;
           }
+        }
+        &--img {
+          height: 350px;
+          width : 320px;
+          background-color: blue;
+          margin-left: 30px;
+          float: left;
         }
       }
     }
