--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -5,23 +5,22 @@ html,body{
 .content{
   background-color: #f9fafc;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   &__header{
     margin: 0 auto;
     padding: 0;
-    width: 100%;
-    height: 80px;
-    background-color: white;
+    // width: 100%;
+    height: 60px;
 
     &--center {
-      height: 80px;
+      height: 60px;
       width : 660px;
       background-color: white;
       margin: 0 auto;
-      line-height: 80px;
+      line-height: 47px;
       &--search {
-        height: 80px;
-        width: 22%;
+        height: 60px;
+        width: 25%;
         background-color: white;
         border: solid #F0F8FF;
         text-align: center;
@@ -29,8 +28,8 @@ html,body{
       }
 
       &--like {
-        height: 80px;
-        width: 23%;
+        height: 60px;
+        width: 25%;
         background-color: white;
         border: solid #F0F8FF;
         float: left;
@@ -38,8 +37,8 @@ html,body{
       }
 
       &--post {
-        width: 20%;
-        height: 80px;
+        width: 25%;
+        height: 60px;
         background-color: white;
         border: solid #F0F8FF;
         float: left;
@@ -47,8 +46,8 @@ html,body{
       }
 
       &--page {
-        width: 20%;
-        height: 80px;
+        width: 141px;
+        height: 60px;
         background-color: white;
         border: solid #F0F8FF;
         float: left;
@@ -60,7 +59,7 @@ html,body{
     img {
     padding-left: 186px;
     height: 500px;
-    width: 583px;
+    width: 654px;
     top: 80px;
     right: 565px;
     }
@@ -73,30 +72,69 @@ html,body{
       font-size: 30px;
     }
   &__bottom {
-    margin-top: 45px;
+    margin-top: 15px;
     clear: both;
     &--cordinate {
-    padding-left: 318px;
+    padding-left: 180px;
       span{
         border-bottom: 1px solid #2e1754;
       }
-      &--box {
-        height: 400px;
-        width : 670px;
+      &--list {
+        width : 654px;
+        border: 1px #ddd solid;
         background-color: #f0f8ff;
-        &--image {
-          float: left;
-          img {
-            height: 350px;
-            width : 320px;
+        &--box {
+          border: 1px #ddd solid;
+          border-radius: 3px;
+          width: 270px;
+          margin: 18px 0 0 18px;
+          background: #fff;
+
+          &--image {
+            // float: left;
+            img {
+              height: 350px;
+              width : 270px;
+            }
           }
-        }
-        &--img {
-          height: 350px;
-          width : 320px;
-          background-color: blue;
-          margin-left: 30px;
-          float: left;
+          &--profile {
+            @include clearfix();
+            padding: 9px 10px 9px 10px;
+            border-top: 1px #ddd solid;
+            &--sub {
+              position: relative;
+              width: 50px;
+              float: left;
+            }
+
+            &--main {
+              width: 130px;
+              padding: 2px 0 0 0;
+              -webkit-padding-before: 3px;
+              float: left;
+              &--name {
+                font-size: 14px;
+                line-height: 1.2;
+                font-weight: bold;
+              }
+              &--txt {
+                font-size: 13px;
+                line-height: 1.2;
+                margin: 2px 0 0 0;
+              }
+            }
+            &--like {
+              border: none;
+              border-radius: none;
+              margin: 0;
+              width: 50%;
+              text-align: center;
+              font-family: "Helvetica Neue", "Helvetica", "Arial", "Verdana", sans-serif;
+              font-weight: bold;
+              font-size: 15px;
+              float: left;
+            }
+          }
         }
       }
     }
