--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -86,15 +86,15 @@ html,body{
         &--box {
           border: 1px #ddd solid;
           border-radius: 3px;
-          width: 270px;
+          width: 280px;
           margin: 18px 0 0 18px;
           background: #fff;
+          float: left;
 
           &--image {
-            // float: left;
             img {
               height: 350px;
-              width : 270px;
+              width : 280px;
             }
           }
           &--profile {
@@ -105,8 +105,13 @@ html,body{
               position: relative;
               width: 50px;
               float: left;
+              .time {
+                color: #fff;
+                font-size: 11px;
+                position: absolute;
+                bottom: 40px;
+              }
             }
-
             &--main {
               width: 130px;
               padding: 2px 0 0 0;
@@ -116,23 +121,78 @@ html,body{
                 font-size: 14px;
                 line-height: 1.2;
                 font-weight: bold;
+                padding-left: 25px;
               }
               &--txt {
                 font-size: 13px;
                 line-height: 1.2;
                 margin: 2px 0 0 0;
+                padding-left: 25px;
               }
             }
             &--like {
-              border: none;
-              border-radius: none;
-              margin: 0;
-              width: 50%;
-              text-align: center;
-              font-family: "Helvetica Neue", "Helvetica", "Arial", "Verdana", sans-serif;
               font-weight: bold;
               font-size: 15px;
+            }
+            .fa.fa-heart-o{
+              padding-top: 12px;
+            }
+          }
+        }
+        &--boxes {
+          border: 1px #ddd solid;
+          border-radius: 3px;
+          width: 280px;
+          margin: 18px 0 0 18px;
+          background: #fff;
+          float: left;
+          margin: 18px 0 0 50px;
+          &--image {
+             img {
+              height: 350px;
+              width : 280px;
+            }
+          }
+          &--profile {
+            @include clearfix();
+            padding: 9px 10px 9px 10px;
+            border-top: 1px #ddd solid;
+            &--sub {
+              position: relative;
+              width: 50px;
               float: left;
+               .times {
+                color: #fff;
+                font-size: 11px;
+                position: absolute;
+                bottom: 40px;
+              }
+            }
+            &--main {
+              width: 130px;
+              padding: 2px 0 0 0;
+              -webkit-padding-before: 3px;
+              float: left;
+              &--name {
+                font-size: 14px;
+                line-height: 1.2;
+                font-weight: bold;
+                padding-left: 25px;
+              }
+              &--txt {
+                font-size: 13px;
+                line-height: 1.2;
+                margin: 2px 0 0 0;
+                padding-left: 25px;
+              }
+            }
+            &--like {
+              font-weight: bold;
+              font-size: 15px;
+            }
+
+            .fa.fa-heart-o{
+              padding-top: 12px;
             }
           }
         }
