--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -11,9 +11,14 @@
         %li.content__header--center--post
           = link_to root_path do
             %i.fa.fa-file-text-o 投稿
-        %li.content__header--center--page 
-          = link_to root_path do
-            %i.fa.fa-user-circle マイページ
+        - if logged_in?
+          %li.content__header--center--page 
+            = link_to top_path(@user) do
+              %i.fa.fa-user-circle マイページ
+        - else
+          %li.content__header--center--page 
+            = link_to 'ログイン', '/auth/twitter'
+            %i.fa.fa-user-circle
   .content__main
     = image_tag 'header_bg.jpg'
     %h1.text-message 
