edit_action_and_index_html.haml

--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -13,7 +13,7 @@
             %i.fa.fa-file-text-o 投稿
         - if logged_in?
           %li.content__header--center--page 
-            = link_to top_path(@user) do
+            = link_to root_path do
               %i.fa.fa-user-circle マイページ
         - else
           %li.content__header--center--page 
