--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     </ul>
   <% else %>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to 'Twitterでログイン', user_twitter_omniauth_authorize_path(:twitter) %></li>
+      <li><%= link_to 'Twitterでログイン', '/auth/twitter' %></li>
     </ul>
   <% end %>
 </div>
