edit_devise_path

--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -11,13 +11,13 @@
         %li.content__header--center--post
           = link_to root_path do
             %i.fa.fa-file-text-o 投稿
-        - if logged_in?
+        - if signed_in?
           %li.content__header--center--page 
-            = link_to root_path do
+            = link_to top_path(current_user.id) do
               %i.fa.fa-user-circle マイページ
         - else
           %li.content__header--center--page 
-            = link_to 'ログイン', '/auth/twitter'
+            = link_to 'ログイン', new_user_session_path
             %i.fa.fa-user-circle
   .content__main
     = image_tag 'header_bg.jpg'
