--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,12 @@
           <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
         </div>
 
+        <div class="label"><%= f.label :nickname %><br />
+          <%= f.text_field :name %></div>
+        <div class="field">
+          <%= f.file_field :avatar %>
+        </div>
+
         <div class='actions'>
           <%= f.submit class: 'btn btn-primary withripple', value: '新規登録' %>
         </div>
