--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "./reset";
 @import "./mixin/clearfix";
 @import "./tops";
-@import "font-awesome";
+@import "font-awesome"; 
+@import "./user"
