--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -9,22 +9,22 @@
         .form-group
           = f.label :メールアドレス
           %br/
-          = f.email_field :email, autofocus: true, class: 'form-control'
+          = f.email_field :email, autofocus: true, placeholder: 'ニックネームを入力(必須)', class: 'form-control'
         .form-group
           = f.label :パスワード
           - if @validatable
             %em
               (#{@minimum_password_length} 文字以上)
           %br/
-          = f.password_field :password, autocomplete: 'off', class: 'form-control'
+          = f.password_field :password, autocomplete: 'off', placeholder: 'パスワードを入力', class: 'form-control'
         .form-group
           = f.label :パスワード（確認）
           %br/
-          = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
+          = f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'パスワードを入力(確認)', class: 'form-control'
         .label
           = f.label :nickname
           %br/
-          = f.text_field :name
+          = f.text_field :name, autocomplete: 'off', placeholder: 'ニックネームを入力'
         .field
           = f.file_field :avatar
         .actions
